# litert-tunner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  append_tests.py  float32-support-implementation-plan.md  pyproject.toml  pytest.env  test_keras_composition.py
.agents/rules/: caveman.md  testing-code.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  feature_request.yml
.github/workflows/: publish.yml  tests.yml
notebooks/: demo-linear-model.ipynb  quickstart_finetuning.ipynb
src/litert_tunner/: __init__.py  export.py  logging.py  testing_utils.py  trainer.py
src/litert_tunner/distillation/: __init__.py  losses.py  metrics.py  trainer.py
src/litert_tunner/flatbuffer/: __init__.py  parser.py  writer.py
src/litert_tunner/graph/: __init__.py  builder.py  types.py
src/litert_tunner/ops/: __init__.py  add.py  concatenation.py  conv2d.py  dense.py  depthwise_conv2d.py  div.py  expand_dims.py  gelu.py  logistic.py  mean.py  mul.py  neg.py  pack.py  pad.py  pool.py  quantize_op.py  registry.py  relu.py  reshape.py  resize_nearest_neighbor.py  rsqrt.py  shape_op.py  softmax.py  squared_difference.py  strided_slice.py  sub.py  tile.py  transpose.py  transpose_conv.py  utils.py
src/litert_tunner/quantization/: __init__.py  fake_quant.py  numerics.py
test-results/: junit.xml
tests/: conftest.py  test_dummy.py  test_export.py  test_finetuning_e2e.py  test_load_save_roundtrip.py  test_logging.py  test_testing_utils.py  test_trainer.py  testing_utils.py
tests/distillation/: test_losses.py  test_metrics.py  test_trainer.py
tests/flatbuffer/: __init__.py  test_parse_write.py  test_parser.py  test_writer.py
tests/graph/: __init__.py  test_builder.py
tests/networks/: __init__.py  test_constant_ops.py  test_convnext.py  test_efficientnet.py  test_mlp.py  test_mobilenet.py  test_resnet.py
tests/ops/: __init__.py  op_test_utils.py  test_add.py  test_concatenation.py  test_conv2d.py  test_dense.py  test_depthwise_conv2d.py  test_div.py  test_expand_dims.py  test_gelu.py  test_logistic.py  test_mean.py  test_mul.py  test_neg.py  test_pack.py  test_pad.py  test_passthrough_ops.py  test_pool.py  test_quantize_op.py  test_relu.py  test_reshape.py  test_resize_nearest_neighbor.py  test_rsqrt.py  test_shape.py  test_softmax.py  test_squared_difference.py  test_strided_slice.py  test_sub.py  test_tile.py  test_transpose.py  test_transpose_conv.py  test_utils.py
tests/quantization/: __init__.py  test_fake_quant.py  test_numerics.py
