[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litert_tunner"
version = "0.1.0"
description = "LiteRT tuner Python library."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "litert-tunner contributors" }]
dependencies = [
  "keras>=3.0",
  "numpy",
  "tflite>=2.18.0",
  "flatbuffers",
]

[project.optional-dependencies]
dev = [
  "tensorflow>=2.18.0",
  "ai-edge-litert",
  "bump-my-version>=0.26.0",
  "pre-commit>=3.7.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "ty>=0.0.1a8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = false
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/litert_tunner/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
